--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/try_falcon_icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Falcon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
